--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crazystormrt",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A runtime for crarzystorm config in ver 1.01 .",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/ComradeFu/crazystormRT/issues"
   },
-  "homepage": "https://github.com/ComradeFu/crazystormRT#readme"
+  "homepage": "https://github.com/ComradeFu/crazystormRT#readme",
+  "dependencies": {}
 }
